# SuperProcesamientoTexto

./: .gitignore  README.md  checklist_good_project.md  main.py  pyproject.toml  sample.txt  test_analyzer_runner.py  verify_analyzers.py
data/: html_sample.html  markdown_sample.md  txt_sample.txt
data_samples/: complex_en.txt  complex_es.txt  sample_extractors.html  sample_extractors.md  sample_extractors.txt  sample_extractors_count.txt  sample_pt.txt  sample_zh.txt
src/: cli.py
src/procesamientotexto/analyzers/: README.MD  analyzer_runner.py  base.py  frequency_analyzer.py  statistics.py
src/procesamientotexto/analyzers/core/: __init__.py  base.py  frequency_analyzer.py  language_detector.py  readability_analyzer.py  sentiment_analyzer.py  word_counter.py
src/procesamientotexto/analyzers/core/data/: __init__.py  _data_loader.py  stopwords.json
src/procesamientotexto/extractors/: base.py  date_extractor.py  email_extractor.py  url_extractor.py
src/procesamientotexto/models/: text_document.py
src/procesamientotexto/readers/: __init__.py  base.py  html_reader.py  markdown_reader.py  txt_reader.py
src/procesamientotexto/transformers/: __init__.py  cleaner.py  normalizer.py  tokenizer.py
src/text_toolkit/: cli.py  cli_display.py  cli_runner.py
src/text_toolkit/analyzers/: README.MD  __init__.py  analyzer_runner.py  base.py
src/text_toolkit/analyzers/core/: __init__.py  frequency_analyzer.py  language_detector.py  readability_analyzer.py  sentiment_analyzer.py
src/text_toolkit/analyzers/core/data/: __init__.py  _data_loader.py  readability_thresholds.json  sentiment_words.json
src/text_toolkit/extractors/: README.md  __init__.py  base.py  date_extractor.py  email_extractor.py  extractor_runner.py  url_extractor.py
src/text_toolkit/extractors/core/: __init__.py  custom_extractor.py  date_extractor.py  email_extractor.py  url_extractor.py
src/text_toolkit/models/: __init__.py  config_models.py  extraction_result.py  text_document.py
src/text_toolkit/readers/: __init__.py  base.py  html_reader.py  markdown_reader.py  txt_reader.py
src/text_toolkit/transformers/: __init__.py  cleaner.py  normalizer.py  pipeline.py  tokenizer.py
tests/: conftest.py
tests/analyzers/: README.md  test_analyzer_runner.py  test_analyzers.py
tests/analyzers/core/: test_frequency_analyzer.py  test_language_detector.py  test_readability_analyzer.py  test_sentiment_analyzer.py
tests/analyzers/core/data/: test_data_loader.py
tests/cli/: test_cli.py  test_cli_display.py  test_cli_runner.py
tests/extractors/: README.md  conftest.py  test_custom_extractor.py  test_date_extractor.py  test_email_extractor.py  test_extractor_runner.py  test_extractors.py  test_url_extractor.py
tests/extractors/core/: conftest.py  test_custom_extractor.py  test_date_extractor.py  test_email_extractor.py  test_url_extractor.py
tests/fixtures/: html_sample.html  markdown_sample.md  txt_sample.txt
tests/models/: test_extraction_result.py  test_text_document.py
tests/readers/: README.md  test_readers.py
tests/transformers/: README.md  test_transformers.py
